--- a/pom.xml
+++ b/pom.xml
@@ -130,6 +130,11 @@
             <artifactId>jaxb-xjc</artifactId>
             <version>2.2.11</version>
         </dependency>
+        <dependency>
+            <groupId>com.opencsv</groupId>
+            <artifactId>opencsv</artifactId>
+            <version>5.5.2</version>
+        </dependency>
 
 
     </dependencies>
